// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlockWaiverBanner renders a current time waiver 1`] = `
<div
  className="m-block-waiver-banner m-block-waiver-banner--current"
>
  <div
    className="m-block-waiver-banner__header"
  >
    <span
      className="m-block-waiver-banner__alert-icon"
    >
      <svg
        className="c-icon-alert-circle"
        viewBox="-3 -3 54 54"
      >
        <g
          className="c-icon-alert-circle--black"
        >
          <circle
            className="c-icon-alert-circle__outline"
            cx="24"
            cy="24"
            r="27"
          />
          <circle
            className="c-icon-alert-circle__fill"
            cx="24"
            cy="24"
            r="22.59"
          />
          <g
            className="c-icon-alert-circle__exclamation-point"
          >
            <path
              d="m20.39 4.42h7.22a1.81 1.81 0 0 1 1.49 2.11l-1.49 23.22a1.73 1.73 0 0 1 -1.49 1.78h-4.24a1.73 1.73 0 0 1 -1.49-1.78l-1.49-23.22c-.07-1.13.61-2.11 1.49-2.11"
            />
            <path
              d="m21.57 34.54h4.87a1.88 1.88 0 0 1 1.82 1.93v5.17a1.89 1.89 0 0 1 -1.82 1.94h-4.87a1.89 1.89 0 0 1 -1.83-1.94v-5.17a1.88 1.88 0 0 1 1.83-1.93"
            />
          </g>
        </g>
      </svg>
    </span>
    <div
      className="m-block-waiver-banner__title"
    >
      Dispatcher Note - 
      Current
    </div>
  </div>
  <table
    className="m-block-waiver-banner__details"
  >
    <tbody>
      <tr>
        <td
          className="m-block-waiver-banner__detail-label"
        >
          Reason
        </td>
        <td
          className="m-block-waiver-banner__detail-value"
        >
          Block Waiver
        </td>
      </tr>
      <tr>
        <td
          className="m-block-waiver-banner__detail-label m-block-waiver-banner__detail-label--start-time"
        >
          Start Time
        </td>
        <td
          className="m-block-waiver-banner__detail-value m-block-waiver-banner__detail-value--start-time"
        >
          3:53pm
        </td>
      </tr>
      <tr>
        <td
          className="m-block-waiver-banner__detail-label m-block-waiver-banner__detail-label--end-time"
        >
          End Time
        </td>
        <td
          className="m-block-waiver-banner__detail-value m-block-waiver-banner__detail-value--end-time"
        >
          4:26pm
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`BlockWaiverBanner renders a future time waiver 1`] = `
<div
  className="m-block-waiver-banner m-block-waiver-banner--future"
>
  <div
    className="m-block-waiver-banner__header"
  >
    <span
      className="m-block-waiver-banner__alert-icon"
    >
      <svg
        className="c-icon-alert-circle"
        viewBox="-3 -3 54 54"
      >
        <g
          className="c-icon-alert-circle--grey-on-grey"
        >
          <circle
            className="c-icon-alert-circle__outline"
            cx="24"
            cy="24"
            r="27"
          />
          <circle
            className="c-icon-alert-circle__fill"
            cx="24"
            cy="24"
            r="22.59"
          />
          <g
            className="c-icon-alert-circle__exclamation-point"
          >
            <path
              d="m20.39 4.42h7.22a1.81 1.81 0 0 1 1.49 2.11l-1.49 23.22a1.73 1.73 0 0 1 -1.49 1.78h-4.24a1.73 1.73 0 0 1 -1.49-1.78l-1.49-23.22c-.07-1.13.61-2.11 1.49-2.11"
            />
            <path
              d="m21.57 34.54h4.87a1.88 1.88 0 0 1 1.82 1.93v5.17a1.89 1.89 0 0 1 -1.82 1.94h-4.87a1.89 1.89 0 0 1 -1.83-1.94v-5.17a1.88 1.88 0 0 1 1.83-1.93"
            />
          </g>
        </g>
      </svg>
    </span>
    <div
      className="m-block-waiver-banner__title"
    >
      Dispatcher Note - 
      Future
    </div>
  </div>
  <table
    className="m-block-waiver-banner__details"
  >
    <tbody>
      <tr>
        <td
          className="m-block-waiver-banner__detail-label"
        >
          Reason
        </td>
        <td
          className="m-block-waiver-banner__detail-value"
        >
          Block Waiver
        </td>
      </tr>
      <tr>
        <td
          className="m-block-waiver-banner__detail-label m-block-waiver-banner__detail-label--start-time"
        >
          Start Time
        </td>
        <td
          className="m-block-waiver-banner__detail-value m-block-waiver-banner__detail-value--start-time"
        >
          4:26pm
        </td>
      </tr>
      <tr>
        <td
          className="m-block-waiver-banner__detail-label m-block-waiver-banner__detail-label--end-time"
        >
          End Time
        </td>
        <td
          className="m-block-waiver-banner__detail-value m-block-waiver-banner__detail-value--end-time"
        >
          4:43pm
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`BlockWaiverBanner renders a past time waiver 1`] = `
<div
  className="m-block-waiver-banner m-block-waiver-banner--past"
>
  <div
    className="m-block-waiver-banner__header"
  >
    <span
      className="m-block-waiver-banner__alert-icon"
    >
      <svg
        className="c-icon-alert-circle"
        viewBox="-3 -3 54 54"
      >
        <g
          className="c-icon-alert-circle--grey-on-grey"
        >
          <circle
            className="c-icon-alert-circle__outline"
            cx="24"
            cy="24"
            r="27"
          />
          <circle
            className="c-icon-alert-circle__fill"
            cx="24"
            cy="24"
            r="22.59"
          />
          <g
            className="c-icon-alert-circle__exclamation-point"
          >
            <path
              d="m20.39 4.42h7.22a1.81 1.81 0 0 1 1.49 2.11l-1.49 23.22a1.73 1.73 0 0 1 -1.49 1.78h-4.24a1.73 1.73 0 0 1 -1.49-1.78l-1.49-23.22c-.07-1.13.61-2.11 1.49-2.11"
            />
            <path
              d="m21.57 34.54h4.87a1.88 1.88 0 0 1 1.82 1.93v5.17a1.89 1.89 0 0 1 -1.82 1.94h-4.87a1.89 1.89 0 0 1 -1.83-1.94v-5.17a1.88 1.88 0 0 1 1.83-1.93"
            />
          </g>
        </g>
      </svg>
    </span>
    <div
      className="m-block-waiver-banner__title"
    >
      Dispatcher Note - 
      Past
    </div>
  </div>
  <table
    className="m-block-waiver-banner__details"
  >
    <tbody>
      <tr>
        <td
          className="m-block-waiver-banner__detail-label"
        >
          Reason
        </td>
        <td
          className="m-block-waiver-banner__detail-value"
        >
          Block Waiver
        </td>
      </tr>
      <tr>
        <td
          className="m-block-waiver-banner__detail-label m-block-waiver-banner__detail-label--start-time"
        >
          Start Time
        </td>
        <td
          className="m-block-waiver-banner__detail-value m-block-waiver-banner__detail-value--start-time"
        >
          3:36pm
        </td>
      </tr>
      <tr>
        <td
          className="m-block-waiver-banner__detail-label m-block-waiver-banner__detail-label--end-time"
        >
          End Time
        </td>
        <td
          className="m-block-waiver-banner__detail-value m-block-waiver-banner__detail-value--end-time"
        >
          3:53pm
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
